# diversity_thesis

./: .gitignore  My Library.bib  Readme.md  abstract.tex  acknowledgments.tex  appendixa.tex  committee_members.tex  literature.bib  mitthesis.cls  thesis.tex
src/brain_diffuser/: .gitignore  README.md  environment_brain-diffuser2.yml  environment_dreamsim.yaml  pyproject.toml
src/brain_diffuser/analysis/create_analysis_dfs/: create_dfs_adv_pert.py  create_dfs_aicap.py  create_dfs_dropout.py  create_dfs_only_baseline.py
src/brain_diffuser/analysis/progress_presentation_1/: eval_presentation_1.py
src/brain_diffuser/analysis/progress_presentation_2/: eval_presentation_2.py
src/brain_diffuser/analysis/progress_presentation_2_5/: analysis.py  eval_presentation_2_5.py
src/brain_diffuser/analysis/progress_presentation_3/: eval_presentation_3.py
src/brain_diffuser/analysis/thesis_analysis/: additional_plots.py  analysis_advpert.py  analysis_baseline.py  analysis_captions.py  analysis_dropout.py  analysis_helpers.py
src/brain_diffuser/src/recon_diffuser/: __init__.py  re_ai_captions_recon_main.py  re_ai_captions_utils.py  re_clip.py  re_deeprecon_main.py  re_download_nsddata.py  re_dropout_recon_main.py  re_icnn_main.py  re_nsd_main.py  re_perturbation_reconstruction_main.py  re_prepare_deeprecon_data.py  re_prepare_nsd_data.py  re_prepare_things_data.py  re_recon_main.py  re_things_main.py  re_true_feature_recon.py  re_utils.py  re_vd_reconstruct_images.py  re_vdvae.py  utils_diffuser.py
src/brain_diffuser/src/recon_diffuser/adv_pert/: clip_module_testing.py  (+5 more)
(+194 files in other folders)
