[project]
name = "recon-diffuser"
version = "0.1.0"
description = "Nice repo for some cool brain-diffuser experiments."
authors = [
    { name = "Matthias Mildenberger", email = "regauf2@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "pip>=24.1.2",
    "numpy>=2.0.1",
    "tqdm>=4.66.4",
    "pillow>=10.4.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recon_diffuser"]
